--- a/HW3partOne/HW3partOne.Android/HW3partOne.Android.csproj
+++ b/HW3partOne/HW3partOne.Android/HW3partOne.Android.csproj
@@ -115,6 +115,18 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxhdpi\Plan3.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\P1BED4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\P1BED4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\P1BED4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\P1BED4.png" />
+  </ItemGroup>
   <Import Project="..\HW3partOne\HW3partOne.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
